2010-01-02  Peter Bloomfield

	* src/balsa-app.h: new members to save hidden toolbars.
	* src/save-restore.c (config_global_load), (config_save): save
	and restore them.
	* src/main-window.c: options to hide toolbar, SoSbar, and status
	bar.
	* src/main-window.h: add toolbar and sos_bar members.
	* src/message-window.c (message_window_new),
	(mw_show_toolbar_cb): option to hide toolbar.
	* src/sendmsg-window.c (sendmsg_window_new),
	(sw_show_toolbar_cb): option to hide toolbar.
	* src/sendmsg-window.h: add toolbar member.

2010-01-02  Pawel Salek

	* libbalsa/imap/pop3.c: Report errors occuring during downloading
	process earlier to avoid saving corrupted messages.
	* libbalsa/mailbox_pop3.c: do not leak file descriptors on some errors.

2010-01-01  Peter Bloomfield

	* src/sendmsg-window.c: Do not crash in touch-ui version.

2010-01-01  Peter Bloomfield

	* configure.in: Allow configure --enable-touch-ui=no and
	--disable-touch-ui.

2010-01-01  Pawel Salek

	* libbalsa/send.c: Fix bug 605807.

2009-12-30  Pawel Salek

	* configure.in: gtkspell build requires enchant now as well.\
	* src/main-window.c:
	* src/sendmsg-window.c: compile with --enable-touch-ui

2009-12-30  Peter Bloomfield

	* src/sendmsg-window.c (create_lang_menu): use
	enchant_broker_dict_exists() to check languages.

2009-12-29  Pawel Salek

	* libbalsa/rfc3156.c:
	* src/main-window.c: add comments to aid translations...
	* src/sendmsg-window.c: ... to fix bug 605435.

2009-12-29  Peter Bloomfield

	* libbalsa/html.c (lbh_resource_request_starting_cb),
	(lbh_new_window_policy_decision_requested_cb),
	(libbalsa_html_new): use "notify::progress" signal instead of
	deprecated "load-progress-changed"; use
	"new-window-policy-decision-requested" signal to more carefully
	control new windows.

2009-12-29  Peter Bloomfield

	* configure.in: require webkitgtk version 1.1.14 or newer.
	* libbalsa/html.c (lbh_resource_request_starting_cb),
	(libbalsa_html_new): use WebKitwebView's